--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,8 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
 
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity">
+    <android.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@color/primary"
+        android:layout_width="match_parent"
+        android:translationZ="15dp"
+        android:layout_height="wrap_content">
+    </android.widget.Toolbar>
 
     <ListView
         android:id="@android:id/list"
@@ -20,14 +28,15 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
-        <EditText
+        <com.rockerhieu.emojicon.EmojiconEditText
             android:id="@+id/messageInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:hint="@string/hint"
+
+            emojicon:emojiconSize="28sp"
             android:layout_weight="1"
-            android:inputType="textShortMessage"
-            android:lines="1"
-            android:singleLine="true" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
 
         <ImageButton
             android:id="@+id/sendButton"
