--- a/app/src/main/res/layout/chat_message.xml
+++ b/app/src/main/res/layout/chat_message.xml
@@ -3,17 +3,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
+
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_marginLeft="5dp"/>
 
-    <TextView
+
+    <com.rockerhieu.emojicon.EmojiconTextView
         android:id="@+id/message"
+
+        emojicon:emojiconAlignment="baseline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         android:layout_marginLeft="5dp" />
 
 </LinearLayout>
